# estrange

./: .gitignore  Cargo.toml  LICENSE  estrange.sh  flake.nix  readme.md  shell.nix  test.sh
.github/workflows/: release.yaml
src/: contains_file_symlink_in_directory.rs  main.rs  relative_path.rs
